--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,27 +1,59 @@
-
-.navbar .navbar-default .navbar-fixed-top {
-  active;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.navbar-default .navbar-nav .active{
-active;
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-.nav__link {
-color: #399bd1;
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
 }
 
-.nav .navbar-nav {
+.home-page {
+  width: 1024px;
+  margin: 0 auto;
+}
+
+.navbar-default {
   font-family: Open Sans;
   font-size: 1.1rem;
   font-weight: bold;
 }
 
-.jumbotron .jumbotron-bike {
+.active {
+  color: #399bd1;
+}
 
+
+
+.jumbotron {
+  height: 630px;
+  width: 1259px;
   background-image: url('../images/jumbotron-bike.jpg');
 }
 
+.title {
+  font-family: Monoton;
+  font-size: 7.1rem;
+  color: white;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+.btn {
+  height:4.6rem;
+  width: 11.4rem;
+
+  background-color: #399bd1;
+  box-shadow: 0 0 3px rgba(0,0,0,0.5);
+  *Hover* - box-shadow: 0 0 12px rgba(0,0,0,0.9);
+  *Active* - box-shadow: 0 0 0 rgba(0, 0, 0, 0.5);
+}
 
  /*
 
