--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,67 +1,96 @@
-body {
-  margin: 0;
-  padding: 0;
+html {
+  font-size: 14px;
 }
 
-html {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+body {
+  font-family: 'Open Sans', sans-serif;
 }
 
 a {
   text-decoration: none;
 }
 
-*, *:before, *:after {
-  -webkit-box-sizing: inherit;
-  -moz-box-sizing: inherit;
-  box-sizing: inherit;
-}
-
-.navbar-default {
-  font-family: Open Sans;
-  font-size: 1.1rem;
-  font-weight: bold;
-}
-
 .header {
   display: flex;
   justify-content: space-between;
-
 }
 
-.active {
+.navbar-default .navbar-nav > .active > a {
+  background: transparent;
+
   color: #399bd1;
 }
 
-.jumbotron {
-  height: 1334px;
-  width: 2000px;
-  background-image: url('../images/jumbotron-bike.jpg');
+.navbar-nav > li > a {
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+.hero-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  height: 44rem;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
-.title {
+.hero-section--bike {
+  background-image: url('../images/jumbotron-bike.jpg');
+}
+
+.hero-section--bottles {
+  background-image: url('../images/jumbotron-beer.jpg');
+}
+
+.hero-section--flowers {
+  background-image: url('../images/jumbotron-flowers.jpg');
+}
+
+.hero-section--duffel {
+  background-image: url('../images/jumbotron-duffel.jpg');
+}
+
+.hero-section__title {
   font-family: Monoton;
   font-size: 7.1rem;
   color: white;
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
+.hero-section__text {
+  font: inherit;
+  font-size: 21px;
+  font-weight: 200;
+  text-align: center;
+  color: white;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+.hero-section__button {
+  margin-top: 2.8rem;
+}
+
 .btn {
+  padding-top: 1.3rem;
   height:4.6rem;
   width: 11.4rem;
 
   background-color: #399bd1;
   box-shadow: 0 0 3px rgba(0,0,0,0.5);
-  *Hover* - box-shadow: 0 0 12px rgba(0,0,0,0.9);
-  *Active* - box-shadow: 0 0 0 rgba(0, 0, 0, 0.5);
+  /**Hover* - box-shadow: 0 0 12px rgba(0,0,0,0.9);
+  *Active* - box-shadow: 0 0 0 rgba(0, 0, 0, 0.5);*/
 }
 
+
 .featured-project__title{
+  margin-bottom: 20px;
+
   font-size: 1.7rem;
   font-weight: bold;
+  color: #399bd1;
 }
 
 .project-title {
@@ -69,13 +98,23 @@ a {
   font-weight: bold;
 }
 
-.project-image-container {
-height:430px ;
-width:730px;
+.project-image {
+  width: 100%;
+  height: 300px;
 
-background-image: url('../images/featured-project.png');
-background-repeat: no-repeat;
-opacity: 0.7;
+  background-image: url('../images/featured-project.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.7;
+  transition: transform .5s, opacity .5s;
+
+}
+
+.project-image:hover {
+  opacity: 1;
+  transform: scale(1.3);
+  cursor: pointer;
+
 }
 
 .product-categories__title {
@@ -83,12 +122,68 @@ opacity: 0.7;
   font-weight: bold;
   color: #399bd1;
 }
- /*
 
-  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+.project-image-container img {
+  opacity: 0.7;
+}
 
-  <link href="https://fonts.googleapis.com/css?family=Monoton|Open+Sans:400,600,700" type="text/css" rel="stylesheet">
+.projects-examples__title {
+  font-size: 1.7rem;
+  font-weight: bold;
+  color: #399bd1;
+}
 
- <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+.project-examples__image-container {
+  width: 100%;
+  opacity: 0.7;
+  transition: transform .5s, opacity .5s;
+}
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1"/>
+.project-examples__image-container:hover {
+  opacity: 1;
+  transform: scale(1.3);
+  cursor: pointer;
+}
+
+.home-page__footer {
+  margin-top: 40px;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 5.2rem 0;
+
+
+  background-color: #f3f3f3;
+}
+
+.footer__question {
+  margin-bottom: 1.4rem;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.footer__summary {
+  margin-bottom: 2.8rem;
+}
+
+.btn-primary  {
+    width: 160px;
+    padding: 1.3rem 0;
+    border: 0;
+    background-color: #399bd1;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    transition: .5s box-shadow;
+  }
+  .btn-primary:hover {
+    background-color: #399bd1;
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.9);
+}
+
+
+/* Override slick display: block; for visible slide */
+.slick-initialized .slick-slide {
+  display: flex;
+}
