--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -107,7 +107,6 @@ a {
   background-size: cover;
   opacity: 0.7;
   transition: transform .5s, opacity .5s;
-
 }
 
 .project-image:hover {
@@ -187,3 +186,64 @@ a {
 .slick-initialized .slick-slide {
   display: flex;
 }
+
+@media (max-width: 599px) {
+  .home-page {
+    width: 100%;
+  }
+
+.navbar-header__logo img {
+  display: none;
+}
+
+.hero-section .hero-section__title {
+  font-family: Monoton;
+  font-size: 3.7rem;
+  color: white;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+.hero-section--bike {
+  width:451px;
+  height: 750px;
+  background-image: url('../images/jumbotron-bike.jpg');
+}
+
+.hero-section--bottles {
+  width:451px;
+  height: 750px;
+  background-image: url('../images/jumbotron-beer.jpg');
+}
+
+.hero-section--flowers {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width:451px;
+  height: 750px;
+  background-image: url('../images/jumbotron-flowers.jpg');
+}
+
+.hero-section--duffel {
+  width:451px;
+  height: 750px;
+  background-image: url('../images/jumbotron-duffel.jpg');
+}
+
+.project-image img {
+
+  width: 318px;
+  height: 148px;
+}
+
+.footer__question {
+  text-align: center;
+}
+
+.footer__summary {
+  text-align: center;
+}
+
+
+
