--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -134,11 +134,16 @@ a {
 
 .project-examples__image-container {
   width: 100%;
+  overflow: hidden;
+}
+
+.project-examples__image {
+  width: 100%;
   opacity: 0.7;
   transition: transform .5s, opacity .5s;
 }
 
-.project-examples__image-container:hover {
+.project-examples__image:hover {
   opacity: 1;
   transform: scale(1.3);
   cursor: pointer;
@@ -232,9 +237,7 @@ a {
 }
 
 .project-image img {
-
-  width: 318px;
-  height: 148px;
+  background-image: url('../images/mobile-version/featured-project.png');
 }
 
 .footer__question {
