--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -88,7 +88,7 @@ a {
 }
 
 
-.featured-project__title{
+.featured-project__title {
   margin-bottom: 20px;
 
   font-size: 1.7rem;
@@ -96,12 +96,22 @@ a {
   color: #399bd1;
 }
 
-.project-title {
+.featured-project__movie {
   font-size: 1.3rem;
   font-weight: bold;
 }
 
-.project-image {
+.featured-project__director {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.featured-project__image-container {
+  width: 100%;
+  overflow: hidden;
+}
+
+.featured-project__image {
   width: 100%;
   height: 300px;
 
@@ -112,7 +122,7 @@ a {
   transition: transform .5s, opacity .5s;
 }
 
-.project-image:hover {
+.featured-project__image:hover {
   opacity: 1;
   transform: scale(1.3);
   cursor: pointer;
@@ -123,7 +133,14 @@ a {
   font-size: 1.3rem;
   font-weight: bold;
   color: #399bd1;
+  padding-bottom: 10px;
 }
+
+ul {
+  list-style-type: none;
+  padding-left: 0pt;
+}
+
 
 .project-image-container img {
   opacity: 0.7;
@@ -133,6 +150,11 @@ a {
   font-size: 1.7rem;
   font-weight: bold;
   color: #399bd1;
+  padding-bottom: 20px;
+}
+
+.project-examples__author {
+  padding-bottom: 10px;
 }
 
 .project-examples__image-container {
@@ -195,7 +217,7 @@ a {
   display: flex;
 }
 
-.support {
+.container-fluid--no-padding {
   padding: 0;
 }
 
